# operations-debs-contenttranslation-hfst

./: .gitignore  .travis.yml  AUTHORS  BUGS.old  ChangeLog  ChangeLog.old  HACKING  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.rst  THANKS  aclocal.m4  authors.xml  autogen.sh  config.h.in  configure  configure.ac  hfst.m4  hfst_3.10.0~r2798.orig.tar.bz2.delta  hfst_3.10.0~r2798.orig.tar.bz2.id  hfst_3.13.0~r3461.orig.tar.bz2.delta  hfst_3.13.0~r3461.orig.tar.bz2.id  hfst_3.15.0.orig.tar.bz2.delta  hfst_3.15.0.orig.tar.bz2.id  hfst_3.15.1.orig.tar.bz2.delta  hfst_3.15.1.orig.tar.bz2.id  hfst_3.8.1~r4088.orig.tar.gz.delta  hfst_3.8.1~r4088.orig.tar.gz.id
back-ends/foma/: CHANGELOG  Makefile.am  Makefile.in  README  README.cmatrix  README.symbols  apply.c  coaccessible.c  constructions.c  define.c  determinize.c  dynarray.c  flags.c  foma.c  foma.h  fomalib.h  fomalibconf.h  iface.c  io.c  lex.interface.c  lex.lexc.c  lex.yy.c  lexc.l  lexcread.c  mem.c  minimize.c  regex.c  regex.h  regex.l  regex.y  reverse.c  sigma.c  spelling.c  stringhash.c  structures.c  topsort.c  trie.c  utf8.c
back-ends/openfst/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  foo
back-ends/sfst/: Makefile.am  Makefile.in  README  alphabet.cc  alphabet.h  basic.cc  compact.cc  compact.h  determinise.cc  fst.cc  fst.h  generate.cc  hopcroft.cc  interface.h  mem.h  operators.cc  sgi.h  utf8.cc
lgpl-release/: Makefile.am  README-DEV  configure.ac
lgpl-release/back-ends/: Makefile.am
libhfst/src/: FormatSpecifiers.h  HarmonizeUnknownAndIdentitySymbols.cc  HarmonizeUnknownAndIdentitySymbols.h  HfstApply.cc  HfstDataTypes.cc  HfstDataTypes.h  HfstEpsilonHandler.cc  HfstEpsilonHandler.h  HfstExceptionDefs.cc  HfstExceptionDefs.h  HfstExtractStrings.h  HfstFlagDiacritics.cc  HfstFlagDiacritics.h  HfstInputStream.cc  HfstInputStream.h  HfstLookupFlagDiacritics.cc  HfstLookupFlagDiacritics.h  HfstOutputStream.cc  HfstOutputStream.h  HfstPrintDot.cc  HfstPrintDot.h  HfstPrintPCKimmo.cc  HfstPrintPCKimmo.h  HfstRules.cc  HfstStrings2FstTokenizer.cc  HfstStrings2FstTokenizer.h  HfstSymbolDefs.cc  HfstSymbolDefs.h  HfstTokenizer.cc  HfstTokenizer.h  HfstTransducer.cc  HfstTransducer.h  HfstXeroxRules.cc  HfstXeroxRules.h  HfstXeroxRulesTest.cc  Makefile.am  Makefile.in  hfst-string-conversions.cc  hfst-string-conversions.h  hfst.h  (+5 more)
man/: Makefile.am  Makefile.in  hfst-affix-guessify.1  hfst-apertium-proc.1  hfst-build-tagger.1  hfst-calculate.1  hfst-compare.1  hfst-compose-intersect.1  hfst-compose.1  hfst-concatenate.1  hfst-conjunct.1  hfst-determinise.1  hfst-determinize.1  hfst-disjunct.1  hfst-edit-metadata.1  hfst-expand-equivalences.1  hfst-expand.1  hfst-foma-wrapper.1  hfst-foma.1  hfst-format.1  hfst-fst2fst.1  hfst-fst2strings.1  hfst-fst2txt.1  hfst-grep.1  hfst-guess.1  hfst-guessify.1  hfst-head.1  hfst-info.1  hfst-intersect.1  hfst-invert.1  hfst-lexc-compiler.1  hfst-lexc-wrapper.1  hfst-lexc.1  hfst-lookup.1  hfst-minimise.1  hfst-minimize.1  hfst-minus.1  hfst-multiply.1  hfst-name.1  hfst-optimised-lookup.1  (+39 more)
scripts/: Makefile.am  Makefile.in  README  copy-for-windows.sh  fetch-stats.sh  generate-cc-files.sh  generate-static-binaries.sh  hfst-foma  hfst-foma-wrapper.sh.in  hfst-foma.in  hfst-fst2tesseract.xfst  hfst-twolc-bin  make-libhfst-dist.sh  make-python-package.sh  test-morphologies.sh
scripts/finnish-tagtools/: COPYING  Makefile  README  finnish-nertag  finnish-postag  finnish-tokenize  finnpos-ratna-feats.py  finnpos-restore-lemma.py  move_tags  remove_exc  tokenize.py
scripts/make-installable-morphology/: Makefile-skeleton  README  README-skeleton  analyze.sh  english-tokenizer-patch.txt  finnish-tokenizer-patch.txt  generate.sh  make-all-hfst-morphologies.sh  make-installable.sh  punct.txt  tokenizer-skeleton
scripts/readmes/: README_eight_tools_mac.txt  README_eight_tools_win.txt  README_python_mac.txt  README_python_win.txt  README_xfst_mac.txt  README_xfst_win.txt
scripts/tokenization/: universal-tokenizer.txt
scripts/windows/: generate-python-bindings.bat  make-foma.bat  make-hfst-lexc.bat  make-hfst-proc.bat  make-hfst-tool.bat  make-hfst-tools.bat  make-hfst-xfst.bat  make-htwolcpre1.bat  make-htwolcpre2.bat  make-htwolcpre3.bat  make-implementations.bat  make-libhfst.bat  make-openfstwin.bat  make-parsers.bat  make-python-bindings.bat  make-python-package.bat  multiple_targets.sh  test-hfst-tools.bat  test_libhfst_win.py
scripts/windows_tests/: test.lexc  test.pmatch  test.twolc  test.xfst  test_lexc_result.txt  test_pmatch_result.txt  test_twolc_result.txt  test_xfst_result.txt
swig/test/: Makefile.am  Makefile.in  test.sh  test_constructors.py  test_examples.py  test_extensions.py  test_flag_diacritics.py  test_hfst_basic_transducer.py  test_lexc.lexc  test_lexc.py  test_lexc_fail.lexc  test_rules.py  test_std_streams.py  test_std_streams.sh  test_streams.py  test_tokenizer.py  test_transducer_functions.py  test_xre_compiler.py
test/libhfst/: Makefile.am  Makefile.in  auxiliary_functions.cc  foobar.att  test_constructors.cc  test_examples.cc  test_flag_diacritics.cc  test_hfst_basic_transducer.cc  test_lexc.cc  test_lexc.lexc  test_rules.cc  test_streams.cc  test_tokenizer.cc  test_transducer_functions.cc  test_transducers.att
test/tools/: 0to3cats.txt  2to4cats.txt  4_cats.txt  4cats.txt  4toINFcats.txt  CAT_uppercased.txt  CAT_uppercased2cat.txt  Makefile.am  Makefile.in  a2a_or_a2b_or_a2unk.txt  a2b_complement.txt  a2b_input_projection_complement.txt  a2b_or_b2b_or_unk2b.txt  a_or_id.txt  ab.txt  ab_shuffle_bc.txt  abid.txt  aid.txt  aid_shuffle_idb.txt  another_epsilon.txt  at_file_quote.foma.xre  at_file_quote.openfst-tropical.xre  at_file_quote.sfst.xre  basic.UTF-8.lexc  basic.UTF-8.lexc.flag.result  basic.UTF-8.lexc.flag.result.prolog  basic.UTF-8.lexc.result  basic.UTF-8.lexc.result.prolog  basic.almost-reserved-words.lexc  basic.almost-reserved-words.lexc.flag.result  basic.almost-reserved-words.lexc.flag.result.prolog  basic.almost-reserved-words.lexc.result  basic.almost-reserved-words.lexc.result.prolog  basic.cat-dog-bird.lexc  (+384 more)
(+1181 files in other folders)
